[gd_scene load_steps=23 format=2]

[ext_resource path="res://components/themes/defaultFont.tres" type="Theme" id=1]
[ext_resource path="res://components/themes/panel.tres" type="Theme" id=2]
[ext_resource path="res://components/themes/TitleFont.tres" type="Theme" id=3]
[ext_resource path="res://components/themes/defaultButtonTheme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/Pause/Pause.gd" type="Script" id=5]
[ext_resource path="res://components/animations/movButton.tres" type="Animation" id=6]
[ext_resource path="res://sounds/arpeggiosA.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/arpeggiosB.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/arpeggiosG#.wav" type="AudioStream" id=9]
[ext_resource path="res://components/animations/mov.buttonBack.tres" type="Animation" id=10]

[sub_resource type="Animation" id=9]
resource_name = "back"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 438.5, 48 ), Vector2( 438.5, 750 ) ]
}

[sub_resource type="Animation" id=1]
length = 2.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.34, 1.56, 1.73, 1.88, 1.92, 1.96, 2.01 ),
"transitions": PoolRealArray( 1, 0.659754, 1.31951, 0.659754, 1.56917, 1, 1.36604, 1 ),
"update": 0,
"values": [ Vector2( 438.5, -115 ), Vector2( 438.5, 48 ), Vector2( 438.5, 20 ), Vector2( 438.5, 48 ), Vector2( 438.5, 40 ), Vector2( 438.5, 48 ), Vector2( 438.5, 43 ), Vector2( 438.5, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:custom_constants/shadow_offset_y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.98, 2.36 ),
"transitions": PoolRealArray( 0.732043, 1.8025 ),
"update": 0,
"values": [ 1, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.98, 2.36 ),
"transitions": PoolRealArray( 0.707107, 1.23114 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -17 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "back"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 438.5, 176 ), Vector2( 438.5, 750 ) ]
}

[sub_resource type="Animation" id=2]
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.01, 0, 0.33, 0.55, 0.72, 0.87, 0.91, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 0.659754, 1.31951, 0.659754, 1.56917, 1, 1.36604, 1 ),
"update": 0,
"values": [ Vector2( 438.5, -115 ), Vector2( 438.5, -504 ), Vector2( 438.5, 176 ), Vector2( 438.5, 146 ), Vector2( 438.5, 176 ), Vector2( 438.5, 166 ), Vector2( 438.5, 176 ), Vector2( 438.5, 170 ), Vector2( 438.5, 176 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.355362, -0.108887 ), Vector2( -0.355362, -6.10889 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 155 ), Vector2( 0, 146 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "movButtonBack"
tracks/0/type = "value"
tracks/0/path = NodePath("Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.346273, -6.14426 ), Vector2( -0.346273, -0.144257 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 146 ), Vector2( 0, 155 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.355362, -0.108887 ), Vector2( -0.355362, -6.10889 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 269 ), Vector2( 0, 260 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "movButtonBack"
tracks/0/type = "value"
tracks/0/path = NodePath("Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.346273, -6.14426 ), Vector2( -0.346273, -0.144257 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 260 ), Vector2( 0, 269 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.355362, -0.108887 ), Vector2( -0.355362, -6.10889 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 383 ), Vector2( 0, 374 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "movButtonBack"
tracks/0/type = "value"
tracks/0/path = NodePath("Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.346273, -6.14426 ), Vector2( -0.346273, -0.144257 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 374 ), Vector2( 0, 383 ) ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.355362, -0.108887 ), Vector2( -0.355362, -6.10889 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 12 ), Vector2( 0, 3 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "movButtonBack"
tracks/0/type = "value"
tracks/0/path = NodePath("Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.346273, -6.14426 ), Vector2( -0.346273, -0.144257 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 3 ), Vector2( 0, 12 ) ]
}

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -226.5
margin_top = -115.0
margin_right = 226.5
margin_bottom = -11.9998
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
anims/back = SubResource( 9 )
anims/mov = SubResource( 1 )

[node name="Title" type="Label" parent="Title"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -8.12412
margin_bottom = -8.12412
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.211765, 0.419608, 0.478431, 1 )
custom_colors/font_color_shadow = Color( 0.121569, 0.247059, 0.278431, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 3
text = "Pause"
align = 1
valign = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.5
margin_top = 390.0
margin_right = 226.5
margin_bottom = 874.999
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
anims/back = SubResource( 10 )
anims/mov = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 54
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
margin_top = 41.0
margin_right = 453.0
margin_bottom = 101.0
theme = ExtResource( 4 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Panel/VBoxContainer/Resume"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.346273
margin_top = -6.14426
margin_right = -0.346283
margin_bottom = -6.14426
theme = ExtResource( 1 )
text = "Resume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/VBoxContainer/Resume"]
anims/movButton = ExtResource( 6 )
anims/movButtonBack = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/Resume"]
stream = ExtResource( 7 )

[node name="setLevel" type="Button" parent="Panel/VBoxContainer"]
margin_top = 155.0
margin_right = 453.0
margin_bottom = 215.0
theme = ExtResource( 4 )
text = "Set Level"

[node name="Text" type="Label" parent="Panel/VBoxContainer/setLevel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.355362
margin_top = -0.468887
margin_right = -0.355377
margin_bottom = -0.468887
theme = ExtResource( 1 )
text = "Set Level"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/VBoxContainer/setLevel"]
anims/movButton = SubResource( 3 )
anims/movButtonBack = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/setLevel"]
stream = ExtResource( 8 )

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer"]
margin_top = 269.0
margin_right = 453.0
margin_bottom = 329.0
theme = ExtResource( 4 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/VBoxContainer/MainMenu"]
anims/movButton = SubResource( 5 )
anims/movButtonBack = SubResource( 6 )

[node name="Text" type="Label" parent="Panel/VBoxContainer/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.355362
margin_top = -0.468887
margin_right = -0.355377
margin_bottom = -0.468887
theme = ExtResource( 1 )
text = "Main Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/MainMenu"]
stream = ExtResource( 9 )

[node name="exit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 383.0
margin_right = 453.0
margin_bottom = 443.0
theme = ExtResource( 4 )
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Panel/VBoxContainer/exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.355362
margin_top = -0.108887
margin_right = -0.355377
margin_bottom = -0.108887
theme = ExtResource( 1 )
text = "Exit Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/VBoxContainer/exit"]
anims/movButton = SubResource( 7 )
anims/movButtonBack = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/VBoxContainer/exit"]
stream = ExtResource( 9 )

[node name="Pause" type="Button" parent="."]
margin_top = 12.0
margin_right = 67.0
margin_bottom = 72.0
theme = ExtResource( 4 )
text = "||"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.355362
margin_top = -0.108887
margin_right = -0.355377
margin_bottom = -0.108887
theme = ExtResource( 1 )
text = "||"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pause"]
anims/movButton = SubResource( 11 )
anims/movButtonBack = SubResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 7 )

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/setLevel" to="." method="_on_setLevel_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
